--- a/apps/IA03-User_Registration/src/app/globals.css
+++ b/apps/IA03-User_Registration/src/app/globals.css
@@ -12,3 +12,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@layer base {
+  button {
+    @apply bg-slate-500 hover:bg-slate-400 min-w-40 px-6 py-3 rounded-lg font-semibold text-white transition-colors;
+  }
+}
