--- a/apps/IA03-User_Registration/src/app/globals.css
+++ b/apps/IA03-User_Registration/src/app/globals.css
@@ -14,7 +14,31 @@ body {
 }
 
 @layer base {
+  h2 {
+    @apply text-xl font-bold text-sky-600;
+  }
   button {
     @apply bg-slate-500 hover:bg-slate-400 min-w-40 px-6 py-3 rounded-lg font-semibold text-white transition-colors;
+  }
+  form {
+    @apply w-full max-w-lg;
+  }
+  form button[type='submit'] {
+    @apply mt-4;
+  }
+  label {
+    @apply text-slate-500;
+  }
+  input {
+    @apply border border-slate-500 rounded px-4 py-2;
+  }
+}
+
+@layer components {
+  .input-wrapper {
+    @apply flex flex-col gap-1;
+  }
+  .error-text {
+    @apply text-sm text-red-500;
   }
 }
